# cpuminer-opt-RPI

./: Makefile.am  README.md  algo-gate-api.c  build.sh  configure  configure.ac  cpu-miner.c  sysinfos.c
algo/: m7m.c
asm/: scrypt-arm.S  sha2-arm.S  sha256-armv8-aarch64.S
